--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install npm dependencies
         run: |
           npm install
+      - name: Run gradle commands
+        run: |
+          chmod +x ./gradlew    
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
