--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,9 @@ jobs:
       - name: Install npm dependencies
         run: |
           npm install
-      - name: Run gradle commands
-        run: |
-          chmod +x ./gradlew    
       - name: Build Android Release
         run: |
-          cd android && ./gradlew assembleRelease
+          cd android && chmod +x ./gradlew  && ./gradlew assembleRelease
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
