--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
           npm install
       - name: Build Android Release
         run: |
-          cd android && chmod +x ./gradlew  && ./gradlew assembleRelease
+          cd android && chmod +x ./gradlew && ./gradlew assembleRelease
       - name: Upload Artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3  # updated from v1 to v3
         with:
           name: app-release.apk
           path: android/app/build/outputs/apk/release/
